<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rxros2_cpp</name>
  <version>0.1.0</version>
  <description>Reactive programming in C++ for ROS 2.</description>
  <author>Henrik Larsen</author>
  <maintainer email="henrik7264@outlook.com">Henrik Larsen</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="wasowski@itu.dk">Andrzej Wasowski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- as soon as we have released this -->
  <!-- build_depend>rxcpp_vendor</build_depend>
  <build_export_depend>rxcpp_vendor</build_export_depend -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
